# wiseai.dev

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  index.html
src/: app.rs  main.rs  router.rs
src/components/: certifications.rs  experience.rs  footer.rs  header.rs  hero.rs  mod.rs  project.rs  projects.rs  skills.rs  trending.rs
src/pages/: landing.rs
static/: manifest.json  robots.txt  sitemap.xml
styles/: body.css
